Fixed tags spacing

--- a/assets/css/custom/_single.scss
+++ b/assets/css/custom/_single.scss
@@ -68,10 +68,6 @@
             margin-bottom: 0;
             line-height: 1.25em;
 
-            a {
-                display: inline;
-            }
-
             .tag-links {
                 a {
                     font-size: 0.9em;
@@ -80,7 +76,7 @@
                     background-color: #dadada;
                     border-radius: 0.125em;
                     padding: 0.25em; 
-                    margin: 0 0.125em 0.125em 0;
+                    margin: 0 0 0.325em 0;
                 }
                 
             }
