--- a/assets/css/custom/_wrapper.scss
+++ b/assets/css/custom/_wrapper.scss
@@ -28,7 +28,7 @@ body {
     background-color: #fff;
 }
 
-.thin-inner > :last-child {
+.thin-inner > *:last-child {
     margin-bottom: 0;
 }
 
